# BrainSegmentation

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  overview.drawio  pyproject.toml  pytest.ini  python_project_structure.md  reso mit resotest.py  search.html
.github/workflows/: mkdocs.yml  pytest.yml
api/: index.html
apptainer/: cpu_segmentation_test.sh  cpu_segmentation_test_slurm.sh  mpcdf_raven.def
cluster/apptainer/: index.html
cluster/info/: index.html
contribute/contributing/: index.html
contribute/howto_write_code/: index.html
contribute/howto_write_docs/: index.html
docs/: api.md  api_reference.md  contributing.md  examples.md  index.md  installation.md  license.md  usage.md
docs/cluster/: apptainer.md  info.md
docs/contribute/: contributing.md
docs/training_data/: FullHeadSeg  FullHeadSeg.md  charm.md  synth_seg.md  upscaling.md
installation/: index.html
python_setup/: environment.yml
python_setup/SynthSeg/: environment.yml  requirements.txt
search/: search_index.json
src/brainseg/: create_fh_seg.py  nifti_utils.py  scale_label_image.py
tests/: run_gaussian_examples.py  test_fh_seg.py  test_nifti_utils.py  test_scale_label_image.py  utils.py
training_data/FullHeadSeg/: index.html
training_data/charm/: index.html
training_data/overview/: index.html
training_data/synth_seg/: index.html
training_data/upscaling/: index.html
