[project]
name = "BrainSegmentation"
version = "2025.0.0"
description = "Provides functionality to prepare training data and train models for MRI brain segmentation"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Patrick Scheibe", email = "patrick@halirutan.de" },
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/halirutan/BrainSegmentation"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
poetry = "2.1.1"
scipy = "1.15.2"
numpy = "2.2.3"
plotly = "6.0.0"
simple-parsing = "0.1.7"
tqdm = "4.67.1"
nibabel = "5.3.2"
wandb = "^0.19.8"
typing = "3.10.0.0"
pytest = "8.3.5"
mkdocs = "1.6.1"
mkdocstrings = "0.29.0"
mkdocstrings-python = "1.16.5"
torch = "2.6.0"
torch_vision = "0.1.6.dev0"

[project.scripts]
scale_label_image = "brainseg.scale_label_image:main"
